[NOREF] Fix unsaved changes tag alignment (#1953)
* fix unsaved changes tag alignment

* added mobile style

--- a/src/features/ModelPlan/ModelToOperations/index.scss
+++ b/src/features/ModelPlan/ModelToOperations/index.scss
@@ -59,12 +59,20 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    padding-right: 2rem;
-    margin-top: -3rem;
+    margin-top: -7rem;
     margin-bottom: .9rem;
+    margin-left: 17rem;
     position: fixed;
-    right: 0;
     z-index: 1000;
+
+    @media screen and (max-width: $tablet) {
+        margin-left: 0rem;
+        right: 0;
+    }
+
+    @media screen and (max-width: $mobile) {
+        margin-top: -3rem;
+    }
 }
 
 .panel-footer {
